# python-WAF

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: waf_config.yaml
data/: training_data.csv
data/learning/: .gitkeep
demo_app/: Dockerfile  app.py
models/: .gitkeep
scripts/: generate_dataset.py  train_model.py
waf/ai/: __init__.py  anomaly_detector.py  classifier.py  features.py  learner.py  models.py  trainer.py
waf/core/: engine.py  models.py  proxy.py
waf/security/: ip_filter.py  rate_limiter.py  rules_sqli.py  rules_xss.py
waf/utils/: config_parser.py  logger.py
